@@ -1,20 +1,0 @@
-# Copyright 1999-2005 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-laptop/gkrellm-pmu/Attic/gkrellm-pmu-2.2.ebuild,v 1.4 2005/01/01 14:45:57 eradicator Exp $
-
-DESCRIPTION="GKrellM2 plugin for battery display on Apple machines"
-HOMEPAGE="http://pbbuttons.sourceforge.net/projects/gkrellm-pmu/index.html"
-SRC_URI="mirror://sourceforge/gkrellm-pmu/${P}.tar.gz"
-
-LICENSE="GPL-2"
-SLOT="2"
-KEYWORDS="~ppc"
-IUSE=""
-
-DEPEND="=app-admin/gkrellm-2*"
-
-src_install() {
-	dodir /usr/lib/gkrellm2/plugins
-	emake DESTDIR=${D} PLUGIN_INSTALL="${D}/usr/lib/gkrellm2/plugins" install || die
-	dodoc ChangeLog INSTALL README
-}
