@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-laptop/gkrellm-pmu/Attic/gkrellm-pmu-2.3.ebuild,v 1.4 2005/01/01 14:45:57 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-laptop/gkrellm-pmu/Attic/gkrellm-pmu-2.3.ebuild,v 1.5 2005/07/17 03:25:55 pylon Exp $
 
 DESCRIPTION="GKrellM2 plugin for battery display on Apple machines"
 HOMEPAGE="http://pbbuttons.sourceforge.net/projects/gkrellm-pmu/index.html"
@@ -8,7 +8,7 @@ SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="2"
-KEYWORDS="-* ~ppc"
+KEYWORDS="-* ppc"
 IUSE=""
 
 DEPEND=" >=x11-libs/gtk+-2.0
