@@ -1,6 +1,10 @@
 # ChangeLog for app-laptop/gkrellm-pmu
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-laptop/gkrellm-pmu/ChangeLog,v 1.8 2005/01/01 14:45:57 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-laptop/gkrellm-pmu/ChangeLog,v 1.9 2005/07/17 03:25:55 pylon Exp $
+
+  17 Jul 2005; Lars Weiler <pylon@gentoo.org> -gkrellm-pmu-2.0.ebuild,
+  -gkrellm-pmu-2.2.ebuild, gkrellm-pmu-2.3.ebuild:
+  Stable on ppc.
 
   08 Dec 2004; Michael Hanselmann <hansmi@gentoo.org>
   gkrellm-pmu-2.3.ebuild:
